@@ -1,3 +1,8 @@
+2007-04-08  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclCompile (tclInstructionTable): fixed bugs in
+	description of dict instructions
+
 2007-04-07  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclCompile (tclInstructionTable): fixed bug in
